# BionicDL-CobotLearning-Project1

./: LICENSE  README.md
franka_description/: CMakeLists.txt  package.xml
franka_description/config/: grasp_list.yaml  panda.rviz
franka_description/include/franka_description/: franka_pick_place_server.h
franka_description/models/cube_b/: model.sdf
franka_description/models/cube_g/: model.sdf
franka_description/models/cylinder_b/: model.sdf
franka_description/models/cylinder_g/: model.sdf
franka_description/models/sphere_b/: model.sdf
franka_description/models/sphere_g/: model.sdf
franka_description/models/table/: model.sdf
franka_description/robots/: hand.xacro  panda.gazebo.xacro  panda.transmission.xacro  panda_arm.urdf.xacro  panda_arm.xacro  panda_arm_hand.urdf.xacro  panda_arm_hand_simulation.urdf.xacro  sensor.urdf.xacro
franka_description/scripts/: project_grasp.py
franka_description/src/: franka_pick_place_server.cpp
franka_description/srv/: PickPlace.srv
franka_description/worlds/: franka.world  franka_1.world  franka_2.world  franka_test.world  simple_geometry.world
franka_gazebo/: CMakeLists.txt  package.xml
franka_gazebo/controller/: controller_franka.yaml
franka_gazebo/launch/: controller_utils.launch  franka.launch  test_world.launch
panda_moveit_config/: .setup_assistant  package.xml
panda_moveit_config/config/: fake_controllers.yaml  grasp_list.yaml  kinematics.yaml  ompl_planning.yaml  panda.srdf  panda_gripper_controllers_gazebo.yaml  sensors.yaml
panda_moveit_config/launch/: demo.launch  move_group.launch  moveit_rviz.launch  panda.rviz  panda_moveit.launch  panda_moveit_controller_manager.launch.xml  panda_moveit_sensor_manager.launch.xml  planning_context.launch  ros_controllers.launch  sensor_manager.launch.xml  trajectory_execution.launch.xml
panda_moveit_config/scripts/: project_grasp.py  test.py
